Criando alterações no layout para about.me pessoal. Incluido foto e alguns dados

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Jane Roe, Chief Technical Architect</title>
+	<title>Nicolas Vogiantzis, Analyst Systems </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="aboutme.css">
@@ -15,44 +15,44 @@
 	<div class="scrim"></div>
 
 	<div class="head">
-		<h1>Jane&nbsp;Roe</h1>
+		<h1>Nicolas Vogiantzis</h1>
 
-		<p>Chief Technical Architect</p>
+		<p>Coordenador de TI & Analista de Sistemas</p>
 
 		<div class="contact-info">
 			<a href="#">
 				<i class="icon icon-mail">&#xe800;</i>
-				<span class="text">janeroe@gmail.com</span>
+				<span class="text">nick_.s@hotmail.com</span>
 			</a>
 
 			<a href="#">
 				<i class="icon icon-mobile">&#xe802;</i>
-				<span class="text">9876543210</span>
+				<span class="text">(11) 9-6623-2827</span>
 			</a>
 
 			<a href="#">
 				<i class="icon icon-location">&#xe801;</i>
-				<span class="text">Bangalore, India</span>
+				<span class="text">São Paulo-SP, Brasil</span>
 			</a>
 
 			<a href="#">
 				<i class="icon icon-github">&#xf113;</i>
-				<span class="text">github.com/janeroe</span>
+				<span class="text">github.com/nickvgs</span>
 			</a>
 
 			<a href="#">
 				<i class="icon icon-stackoverflow">&#xf16c;</i>
-				<span class="text">janeroe</span>
+				<span class="text">nickvgs</span>
 			</a>
 		</div>
 	</div>
 
 	<section class="section intro">
-		<h2>About</h2>
+		<h2>Sobre</h2>
 
 		<p>
-			Expert in front-end development with more than 10 years of experience in providing cutting-edge solutions to business problems
-			for top companies like Apple, Google and Microsoft.
+			Experiência como Técnico em Eletrônica, Analista de Suporte e Coordenador 
+			de equipe e atualmente como Analista de Sistemas para sustentação.
 		</p>
 	</section>
 
