ajuste na profissão

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="head">
 		<h1>Nicolas Vogiantzis</h1>
 
-		<p>Coordenador de TI & Analista de Sistemas</p>
+		<p>Técnico & Analista</p>
 
 		<div class="contact-info">
 			<a href="#">
